style: fix scrollbar width when open the menu

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,11 @@
   }
 }
 
+html,
 body {
   @apply bg-black;
+  scrollbar-gutter: stable;
+  scrollbar-width: thin;
 }
 
 @utility hellich {
@@ -65,7 +68,46 @@ body {
 @utility about {
   @apply bg-[url('./assets/images/dark-grain-bg.svg')] bg-cover bg-center bg-no-repeat;
 }
+html::-webkit-scrollbar,
+body::-webkit-scrollbar,
+html.menu-open::-webkit-scrollbar,
+body.menu-open::-webkit-scrollbar {
+  width: 10px;
+}
 
+html.menu-open::-webkit-scrollbar,
+body.menu-open::-webkit-scrollbar {
+  width: 5px;
+}
+
+html.menu-open,
+body.menu-open {
+  scrollbar-color: #ffffff #ffffff;
+}
+
+html.menu-open::-webkit-scrollbar-track,
+body.menu-open::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+html.menu-open::-webkit-scrollbar-thumb,
+body.menu-open::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+}
+
+html::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+  background: black;
+}
+
+html::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+  background-clip: padding-box;
+  background-color: var(--color-second-bg);
+  border-radius: 12px;
+  border: 1px solid transparent;
+}
 @layer components {
   .nav-link-animated {
     @apply relative pb-1 transition-colors duration-300;
